--- a/templates/step/second_steps.html
+++ b/templates/step/second_steps.html
@@ -11,10 +11,18 @@
 {% block content %}
     <div class="row">
         <div class="col-8">
-            <p class="fs-1">Seconde phase</p>
-        </div>
+                <div class="row">
+                    <div class="col-5">
+                        <p class="fs-1">Seconde phase</p>
+                    </div>
+                    <div class="col-7 my-auto align-center">
+                        <a class="btn btn-danger" href="{% url 'cancel_steps' firs_step.tournament.pk 2 %}">ANNULER CETTE
+                            PHASE</a>
+                    </div>
+                </div>
+            </div>
         <div class="col-4 d-flex justify-content-center align-items-center gap-2">
-            <a class="btn btn-primary" href="{% url 'step_pdf' firs_step.pk 2 %}" target="_blank">Imprimer les
+            <a class="btn btn-primary" href="{% url 'steps_pdf' firs_step.pk 2 %}" target="_blank">Imprimer les
                 poules</a>
             {% if steps_are_done %}
                 {% if not_created %}
@@ -22,7 +30,7 @@
                         {% csrf_token %}
                         <div class="col">
                             <label for="set_number">
-                                Nombre de sets
+                                Nombre de Manches
                             </label>
                             <select class="form-select" id="set_number" name="set_number">
                                 <option value="3">3</option>
@@ -46,8 +54,15 @@
     </div>
     {% for step in steps|dictsort:"rank" %}
         <hr>
-        <div>
-            Poules des rangs {{ step.rank }}
+        <div class="row mb-4">
+            <div class="col-2">Poules des rangs {{ step.rank }}</div>
+            <div class="col-10">
+                {% if step.is_done %}
+                	<a href="{% url 'step_pdf' step.pk %}" target="_blank" class="btn btn-primary">Imprimer la suite</a>
+                {% endif %}
+            </div>
+            
+                
         </div>
         <div class="row d-flex justify-content-around gap-3">
             {% for pool in step.pools.all %}
@@ -60,9 +75,9 @@
                             <div class="col-3">
                                 {% if pool.is_done %}
                                     <a class="btn btn-primary" href="{% url "validate_pool" step.pk pool.pk %}"
-                                       style="font-size: 0.8em">Valider la poule</a>
+                                       style="font-size: 0.8em">Faire les départages</a>
                                 {% else %}
-                                    <a class="btn btn-primary disabled" style="font-size: 0.8em">Valider la poule</a>
+                                    <a class="btn btn-primary disabled" style="font-size: 0.8em">Faire les départages</a>
                                 {% endif %}
                             </div>
                         </div>
@@ -104,7 +119,7 @@
                                 <th scope="col">#</th>
                                 <th style="width: 100px" scope="col">Joueur 1</th>
                                 <th style="width: 100px" scope="col">Joueur 2</th>
-                                <th scope="col">Sets</th>
+                                <th scope="col">Manches</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -121,7 +136,7 @@
                                                 {% for set in game.sets.all %}
                                                     <div class="col mx-1" style="min-width: 50px; max-width: 50px">
                                                         <label class="form-label"
-                                                               for="{{ set.pk }}">Set {{ forloop.counter }}</label>
+                                                               for="{{ set.pk }}">Manche {{ forloop.counter }}</label>
                                                         <input class="form-control" id="{{ set.pk }}" type="text"
                                                                name="{{ set.pk }}"
                                                                value="{{ set.score|default_if_none:"" }}">
