--- a/templates/step/step_view.html
+++ b/templates/step/step_view.html
@@ -52,6 +52,7 @@
                 {% endif %}
             </div>
         </div>
+        <hr>
         <div class="row d-flex justify-content-around gap-3">
             {% for pool in step.pools.all %}
                 <div id="accordion{{ pool.pk }}" style="min-width:650px; max-width: 650px">
@@ -120,13 +121,13 @@
                                     {% endfor %}
                                 </div>
                                 <div class="col-5">
-                                    <form class="row border rounded" method="post"
+                                    <form class="row border rounded p-2" method="post"
                                           action="{% url 'force_pool_validation' step.pk pool.pk %}">
                                         {% csrf_token %}
                                         <button
                                                 class="btn"
                                                 type="submit"
-                                                style="width: 40px;height: 40px; padding: 0; font-size: 20px; position: absolute; top: 80px; right:15px"
+                                                style="width: 40px;height: 40px; padding: 0; font-size: 20px; position: absolute; top: 100px; right:15px"
                                         >✔
                                         </button>
                                         {% for player in pool.players.all %}
