multiple impl/fixes

--- a/templates/my_template.html
+++ b/templates/my_template.html
@@ -50,7 +50,7 @@
             <tr>
                 <th headers="other">Joueur 1</th>
                 <th headers="other">Joueur 2</th>
-                <th headers="other" colspan="{{ pool.object.step.set_number }}">Sets</th>
+                <th headers="other" colspan="{{ pool.object.step.set_number }}">Manches</th>
                 {% for player in pool.players %}
                     <th headers="winner">{{ forloop.counter }}</th>
                 {% endfor %}
