--- a/templates/step/final_steps.html
+++ b/templates/step/final_steps.html
@@ -67,11 +67,10 @@
                                                                 </label>
                                                                 <input
                                                                         class="form-control"
-                                                                        style="width: 40px; height: 24px;"
+                                                                        style="width: 80px; height: 24px;"
                                                                         type="text"
                                                                         name="table"
-                                                                        value="
-                                                                                {% if pool.table %}{{ pool.table }}{% endif %}"
+                                                                        value="{% if pool.table %}{{ pool.table }}{% endif %}"
                                                                         id="table"
                                                                 >
                                                             </div>
