--- a/templates/step/step_view.html
+++ b/templates/step/step_view.html
@@ -78,7 +78,7 @@
                                                             Table:
                                                         </label>
                                                         <input
-                                                                class="form-control" style="width: 40px; height: 24px;"
+                                                                class="form-control" style="width: 80px; height: 24px;"
                                                                 type="text"
                                                                 name="table"
                                                                 value="{% if pool.table %}{{ pool.table }}{% endif %}"
@@ -143,7 +143,9 @@
                                     </form>
                                 </div>
                             </div>
-                            <table class="table table-striped collapse"
+                            <table class="table table-striped collapse {% if pool.pk == pool_id_to_show %}
+                            	show
+                            {% endif %} "
                                    id="collapse{{ pool.pk }}"
                                    aria-labelledby="headingOne"
                                    data-parent="#accordion{{ pool.pk }}"
